homepage subfeature layout issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -190,6 +190,13 @@ address {
     background-color: #E0DDB7;
 }
 
+.nav-pills>li>a.btn:hover {
+  color: #fff;
+  background-color: #449d44;
+  border-color: #398439;
+  background-position: 0 150px; /* Fixes pledge now button, no clue why */
+}
+
 /*.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {
     background-color: #C7F4B1;
 }*/
@@ -279,8 +286,8 @@ div#therm-img {
     position: absolute;
     left: 0px;
     top: 0px;
-    clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
     -webkit-clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
     -webkit-animation: thermometer-image ease-in 1.5s;
     animation: thermometer-image ease-in 1.5s;
     -webkit-animation-fill-mode:forwards;  
@@ -294,7 +301,7 @@ div#therm-img {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     height: 15px;
-    margin: 10px auto 50px;
+    margin: 10px auto 0px;
     border: solid 3px #0c7344;
 }
 
@@ -357,7 +364,31 @@ a:hover#therm-link {
     animation-delay: 2s;
 }
 
+div.homepage-subfeatures {
+    padding-bottom: 20px;
+}
 
+div.homepage-subfeatures h3 {
+    padding-top: 30px;
+    margin-top: 0px;
+    margin-bottom: 15px;
+}
+
+div.homepage-subfeatures img {
+    margin-bottom: 10px;
+}
+
+div.homepage-subfeatures h4 {
+    margin-top: 0;
+}
+
+@media (min-width: 768px) {
+    div.neg-left {
+        margin-left: -15px;
+    }
+
+
+}
 /* Images and Captions 
 
 See http://docs.ckeditor.com/#!/guide/dev_captionedimage-section-image-alignment-and-classes
